# Compressor

./: .gitignore  README.md
project/: .gitignore  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  Common.h  README.md  dconfig  decode.cpp  deflate  encode.cpp  functions.h  main.cpp  runTheCode.txt  testMainUNZIP  testMainZip
project/html/: _command_handler_8cpp_source.html  _command_handler_8h_source.html  _common_8h.html  _common_8h_source.html  annotated.html  class_command_handler-members.html  class_command_handler.html  classes.html  classhuffman-members.html  classhuffman.html  decode_8cpp.html  decode_8cpp_source.html  deflate_8cpp_source.html  encode_8cpp.html  encode_8cpp_source.html  files.html  functions.html  functions_8h.html  functions_8h_source.html  functions_func.html  index.html  main_8cpp_source.html  md__r_e_a_d_m_e.html  pages.html  struct_node-members.html  struct_node.html
project/latex/: _command_handler_8cpp_source.tex  _command_handler_8h_source.tex  _common_8h.tex  _common_8h_source.tex  annotated.tex  class_command_handler.tex  classhuffman.tex  decode_8cpp.tex  decode_8cpp_source.tex  deflate_8cpp_source.tex  encode_8cpp.tex  encode_8cpp_source.tex  files.tex  functions_8h.tex  functions_8h_source.tex  main_8cpp_source.tex  md__r_e_a_d_m_e.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  struct_node.tex
project/operations/: FileIO.cpp  FileIO.h  Huffman.cpp  lz77.h
project/source code/: decode.cpp
project/test files/: outputFile.huf
project/testFiles/: 2output2File.huf  fCompTest.huf  (+1 more)
(+70 files in other folders)
